--- a/Netflix.html
+++ b/Netflix.html
@@ -218,6 +218,13 @@
     <button type="submit">今すぐ始める</button>
   </form>
 </section>
+  <!-- Netflix風リンクをここに追加！ -->
+<div style="padding: 20px; text-align: center;">
+  <a href="https://sssjpjp.github.io/Netflix.com/Netflix.html" target="_blank"
+     style="color:#e50914; font-weight:bold; font-size:18px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; text-decoration: none;">
+    https://www.netflix.com
+  </a>
+</div>
 
 <!-- ログインモーダル -->
 <div id="loginModal">
